# smart-proposal-generator

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  HF_SETUP.md  README.md  package.json  pnpm-lock.yaml  run-migration.mjs  setup-github.sh  turbo.json  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml  hf-sync.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 200b07f62c59_initial_schema.py  7f1a2b3c4d5e_trial_and_billing.py  8a2b3c4d5e6f_add_onboarding_fields.py  9b3c4d5e6f7a_add_embeddings_vector_index.py
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py  redis.py  security.py
apps/api/app/modules/clients/: commands.py  handlers.py  models.py  queries.py  router.py  schemas.py
apps/api/app/modules/embeddings/: commands.py  models.py  queries.py  router.py  schemas.py  service.py
apps/api/app/modules/exports/: docx.py  email.py  pdf.py  router.py  schemas.py
apps/api/app/modules/proposals/: commands.py  events.py  handlers.py  models.py  queries.py  router.py  schemas.py
apps/api/app/shared/: db_helpers.py  schemas.py  tenant.py
apps/api/tests/: conftest.py  test_clients.py  test_exports.py  test_proposals.py  test_tenant_isolation.py
apps/web/: .env.local.example  drizzle.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  package.json  proxy.ts  (+5 more)
demo/: offline-demo.html
docs/: CEO-Review-SmartSPG.html  DEPLOYMENT.md  GOOGLE-AUTH-SETUP.md  claude-code-prompt.md
infra/: docker-compose.yml
scripts/: setup.sh
(+154 files in other folders)
